# QuickRead

./: APickle.txt  CHANGELOG.md  LoremIpsum.txt  large.txt  quickRead.cabal
app/: Main.hs
src/Data/: Tape.hs
src/QuickRead/: Arg.hs  Draw.hs  Event.hs  Init.hs  Logic.hs  Scroll.hs  Theme.hs  Types.hs  Util.hs
src/QuickRead/Scroll/: File.hs  Text.hs
src/QuickRead/StartMenu/: Start.hs
