cabal-version:      2.4
name:               quickRead
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Trouble-Truffle
maintainer:         perigordtruffle73198@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
  build-depends:
    , base          ^>=4.14.3.0
    , brick
    , containers    >=0.6.0.1
    , directory
    , lens
    , stm
    , Stream        >=0.4.7
    , transformers
    , vty

  other-extensions:
    LambdaCase
    OverloadedLists
    OverloadedStrings
    TemplateHaskell

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -haddock

library
  import:           common

  -- Modules included in this library but not exported.
  other-modules:
    Data.Tape
    QuickRead.Draw
    QuickRead.Event
    QuickRead.Init
    QuickRead.Logic
    QuickRead.Theme
    QuickRead.Types
    QuickRead.Util

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  hs-source-dirs:   src
  default-language: Haskell2010

executable quickRead
  import:           common
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  build-depends:
    , base       ^>=4.14.3.0
    , quickRead

  ghc-options:      -threaded
  hs-source-dirs:   app
  default-language: Haskell2010
